--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -93,8 +93,6 @@
 }
 body {
   margin: 0;
-  background: url("../img/main-bg.jpg") no-repeat;
-  background-size: cover;
 }
 html {
   box-sizing: border-box;
@@ -127,7 +125,6 @@ li {
   list-style: none;
 }
 .main-wrapper {
-  overflow: hidden;
   position: relative;
 }
 .container {
@@ -146,8 +143,12 @@ header {
 }
 .navbar-logo {
   float: left;
+  margin-top: 31px;
 }
 .navbar-collapse {
+  ul {
+    margin: 26px 0;
+  }
   li {
     display: inline-block;
     border: 2px solid transparent;
@@ -175,4 +176,6 @@ header {
   }
   float: right;
 }
-
+.header-slider {
+  background: url("../img/main-bg.jpg") center top no-repeat;
+}
