--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -133,7 +133,6 @@ li {
   margin-right: auto;
   padding: 0 15px;
   overflow: hidden;
-
 }
 .navbar-toggler {
   display: none;
@@ -176,6 +175,6 @@ header {
   }
   float: right;
 }
-.header-slider {
-  background: url("../img/main-bg.jpg") center top no-repeat;
+.sl-slider {
+  background: url("../img/main-bg.jpg") no-repeat;
 }
