--- a/app/css/main.css
+++ b/app/css/main.css
@@ -103,20 +103,16 @@ li {
   list-style: none; }
 
 .main-wrapper {
-  position: relative; }
-
-.container {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0 15px;
-  overflow: hidden; }
+  width: 100%;
+  min-width: 320px;
+  margin: 0 auto;
+  padding: 0; }
 
 .navbar-toggler {
   display: none; }
 
-header {
-  background: #1d2126; }
+nav {
+  background-color: #1d2126; }
 
 .navbar-logo {
   float: left;
@@ -151,5 +147,67 @@ header {
     font-style: normal;
     padding: 4px 12px; }
 
-.sl-slider {
-  background: url("../img/main-bg.jpg") no-repeat; }
+.sl-slide {
+  background: url("../img/main-bg.jpg") center top no-repeat;
+  margin: 0 auto;
+  position: relative; }
+  .sl-slide:before {
+    position: absolute;
+    content: '';
+    background-color: #000;
+    opacity: 0.4;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0; }
+  .sl-slide .container {
+    display: table;
+    width: 100%;
+    position: relative;
+    min-height: 660px; }
+
+.container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 15px;
+  overflow: hidden; }
+
+.slick-dots {
+  bottom: 0; }
+
+.slick-dots li button {
+  border: 1px solid #fff;
+  -webkit-border-radius: 50%;
+          border-radius: 50%; }
+
+.slick-dots li button:before,
+.slick-dots li.slick-active button:before {
+  content: '';
+  opacity: 1;
+  width: 12px;
+  height: 12px;
+  -webkit-transition: 0.4s all;
+  -o-transition: 0.4s all;
+  transition: 0.4s all; }
+
+.slick-dots li button,
+.slick-dots li button:hover,
+.slick-dots li button:focus {
+  width: 10px;
+  height: 10px; }
+
+.slick-dots li button:hover:before,
+.slick-dots li.slick-active button:before {
+  background-color: transparent;
+  -webkit-border-radius: 50%;
+          border-radius: 50%; }
+
+.slick-dots li.slick-active button:before {
+  background-color: #fff; }
+
+.slick-dots {
+  right: 5%;
+  bottom: 0;
+  text-align: right;
+  margin-bottom: 30px; }
