--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -52,12 +52,12 @@
 
 @font-face {
   font-family: 'Quattrocento Sans';
-  src: url('../fonts/QuattrocentoSans-Bold.eot');
-  src: url('../fonts/QuattrocentoSans-Bold.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/QuattrocentoSans-Bold.woff') format('woff'),
-  url('../fonts/QuattrocentoSans-Bold.ttf') format('truetype'),
-  url('../fonts/QuattrocentoSans-Bold.svg#QuattrocentoSans-Bold') format('svg');
-  font-weight: bold;
+  src: url('../fonts/QuattrocentoSans.eot');
+  src: url('../fonts/QuattrocentoSans.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/QuattrocentoSans.woff') format('woff'),
+  url('../fonts/QuattrocentoSans.ttf') format('truetype'),
+  url('../fonts/QuattrocentoSans.svg#QuattrocentoSans') format('svg');
+  font-weight: normal;
   font-style: normal;
 }
 
@@ -96,7 +96,7 @@ body {
 }
 html {
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans';
   font-weight: normal;
   font-style: normal;
   font-size: 16px;
@@ -118,7 +118,8 @@ img {
   box-sizing: inherit;
 }
 h1,h2,h3,h4,h5 {
-  font-family: 'Quattrocento Sans', sans-serif;
+  font-family: 'Quattrocento Sans';
+  font-weight: 700;
   text-transform: uppercase;
 }
 li {
@@ -150,7 +151,7 @@ nav {
     border: 2px solid transparent;
     border-radius: 3px;
     margin: 0 14px;
-    transition: .3s;
+    transition: .2s;
     &:hover {
       border: 2px solid #5b6168;
       border-radius: 3px;
@@ -189,7 +190,6 @@ nav {
   .container {
     display: table;
     width: 100%;
-    position: relative;
     min-height: 660px;
   }
 }
@@ -199,10 +199,6 @@ nav {
   margin-right: auto;
   padding: 0 15px;
   overflow: hidden;
-}
-
-.slick-dots {
-  bottom: 0;
 }
 
 .slick-dots li button {
@@ -216,7 +212,7 @@ nav {
   opacity: 1;
   width: 12px;
   height: 12px;
-  transition: 0.4s all;
+  transition: 0.2s all;
 }
 
 .slick-dots li button,
@@ -239,4 +235,48 @@ nav {
   bottom: 0;
    text-align: right;
    margin-bottom: 30px;
+}
+.slick-dotted.slick-slider {
+  margin: 0;
+}
+ .header-container {
+   position: relative;
+ }
+ .slogan {
+   position: absolute;
+   top: 50%;
+   left: 12%;
+   transform: translateY(-50%);
+   width: 47%;
+   h1 {
+     color: #fff;
+     font-size: 36px;
+     margin: 5px 0;
+   }
+   p {
+     color: #ccd0d7;
+   }
+   a {
+     font-size: 14px;
+     color: #fff;
+     border: 2px solid #fff;
+     display: inline-block;
+     border-radius: 3px;
+     padding: 9px 22px;
+     transition: .2s all;
+     margin-right: 11px;
+     &:hover {
+       background: #1db8a5;
+       border: 2px solid #1db8a5;
+     }
+   }
+ }
+.title-about-us {
+  h2 {
+    font-size: 36px;
+    color: #292f36;
+  }
+  p {
+
+  }
 }
