--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -7,16 +7,18 @@
   font-weight: normal;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?y87wpc');
-  src:  url('../fonts/icomoon.eot?y87wpc#iefix') format('embedded-opentype'),
+  src: url('../fonts/icomoon.eot?y87wpc');
+  src: url('../fonts/icomoon.eot?y87wpc#iefix') format('embedded-opentype'),
   url('../fonts/icomoon.ttf?y87wpc') format('truetype'),
   url('../fonts/icomoon.woff?y87wpc') format('woff'),
   url('../fonts/icomoon.svg?y87wpc#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Open Sans';
   src: url('../fonts/OpenSans.eot');
@@ -79,21 +81,27 @@
 .icon-clock:before {
   content: "\e900";
 }
+
 .icon-cogs:before {
   content: "\e901";
 }
+
 .icon-mobile:before {
   content: "\e902";
 }
+
 .icon-pencil:before {
   content: "\e903";
 }
+
 .icon-plus:before {
   content: "\e904";
 }
+
 body {
   margin: 0;
 }
+
 html {
   box-sizing: border-box;
   font-family: 'Open Sans';
@@ -103,28 +111,34 @@ html {
   color: #8d8f92;
   line-height: 1.6;
 }
+
 a {
   text-decoration: none;
   color: #a4aead;
   text-transform: uppercase;
 }
+
 img {
   max-width: 100%;
   height: auto;
 }
+
 *,
 *::before,
 *::after {
   box-sizing: inherit;
 }
-h1,h2,h3,h4,h5 {
+
+h1, h2, h3, h4, h5 {
   font-family: 'Quattrocento Sans';
   font-weight: 700;
   text-transform: uppercase;
 }
+
 li {
   list-style: none;
 }
+
 .main-wrapper {
   width: 100%;
   min-width: 320px;
@@ -135,13 +149,16 @@ li {
 .navbar-toggler {
   display: none;
 }
+
 nav {
   background-color: #1d2126;
 }
+
 .navbar-logo {
   float: left;
   margin-top: 31px;
 }
+
 .navbar-collapse {
   ul {
     margin: 26px 0;
@@ -173,6 +190,7 @@ nav {
   }
   float: right;
 }
+
 .sl-slide {
   background: url("../img/main-bg.jpg") center top no-repeat;
   margin: 0 auto;
@@ -193,6 +211,7 @@ nav {
     min-height: 660px;
   }
 }
+
 .container {
   max-width: 1200px;
   margin-left: auto;
@@ -216,7 +235,7 @@ nav {
 }
 
 .slick-dots li button,
- .slick-dots li button:hover,
+.slick-dots li button:hover,
 .slick-dots li button:focus {
   width: 10px;
   height: 10px;
@@ -227,56 +246,422 @@ nav {
   background-color: transparent;
   border-radius: 50%;
 }
- .slick-dots li.slick-active button:before {
+
+.slick-dots li.slick-active button:before {
   background-color: #fff;
 }
- .slick-dots {
+
+.slick-dots {
   right: 5%;
   bottom: 0;
-   text-align: right;
-   margin-bottom: 30px;
+  text-align: right;
+  margin-bottom: 30px;
 }
+
 .slick-dotted.slick-slider {
   margin: 0;
 }
- .header-container {
-   position: relative;
- }
- .slogan {
-   position: absolute;
-   top: 50%;
-   left: 12%;
-   transform: translateY(-50%);
-   width: 47%;
-   h1 {
-     color: #fff;
-     font-size: 36px;
-     margin: 5px 0;
-   }
-   p {
-     color: #ccd0d7;
-   }
-   a {
-     font-size: 14px;
-     color: #fff;
-     border: 2px solid #fff;
-     display: inline-block;
-     border-radius: 3px;
-     padding: 9px 22px;
-     transition: .2s all;
-     margin-right: 11px;
-     &:hover {
-       background: #1db8a5;
-       border: 2px solid #1db8a5;
-     }
-   }
- }
-.title-about-us {
-  h2 {
+
+.header-container {
+  position: relative;
+}
+
+.slogan {
+  position: absolute;
+  top: 50%;
+  left: 12%;
+  transform: translateY(-50%);
+  width: 47%;
+  h1 {
+    color: #fff;
     font-size: 36px;
-    color: #292f36;
+    margin: 5px 0;
   }
   p {
+    color: #ccd0d7;
+  }
+}
 
+.btn {
+  font-size: 14px;
+  color: #fff;
+  border: 2px solid #fff;
+  display: inline-block;
+  border-radius: 3px;
+  padding: 9px 22px;
+  transition: .2s all;
+  margin-right: 11px;
+  &:hover {
+    background: #1db8a5;
+    border: 2px solid #1db8a5;
+  }
+}
+
+.holder-about-us {
+  margin: 86px 0;
+}
+
+h2 {
+  font-size: 36px;
+  color: #292f36;
+  position: relative;
+  padding-left: 30px;
+  &::before {
+    content: '';
+    width: 10px;
+    height: 35px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    background-color: #e1e6ea;
+    transform: translateY(-50%);
+  }
+}
+
+.left-about {
+  width: 56%;
+  display: inline-block;
+  p {
+    margin: 36px 0;
+    &:first-child {
+      margin-top: 0;
+    }
+  }
+}
+
+.right-about {
+  width: 40%;
+  display: inline-block;
+  margin: 8px 0 0 34px;
+  vertical-align: top;
+}
+
+.social-networking-icons,
+.hover-box {
+  margin-top: 54px;
+  font-size: 0;
+  ul {
+    padding: 0;
+  }
+  li {
+    display: inline-block;
+    margin: 0 1px;
+  }
+  a {
+    display: block;
+    font-family: "Socialico";
+    font-size: 36px;
+    padding: 2px 18px;
+    background-color: #c8cdd0;
+    color: #fff;
+    transition: .2s all;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    &:hover {
+      background-color: #d0d5d9;
+    }
+  }
+}
+
+.right-box {
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  &::before {
+    content: '';
+    display: table;
+    clear: both;
+  }
+  span {
+    font-family: 'Quattrocento Sans';
+    font-size: 20px;
+    display: inline-block;
+    padding: 9px 12px;
+    background-color: #23b7a4;
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+  }
+  h3 {
+    color: #292f36;
+    font-size: 18px;
+    display: inline-block;
+    margin: -6px 0 8px 20px;
+    vertical-align: top;
+  }
+  p {
+    float: right;
+    width: 84%;
+    margin-top: -21px;
+  }
+}
+
+.numb {
+  height: 100%;
+  display: inline-block;
+}
+
+.about-us {
+  border-bottom: 1px solid #dee2e5;
+}
+
+.team-block {
+  width: 263px;
+  display: inline-block;
+  margin: 0 17px;
+  &:hover {
+    .hover-box {
+      opacity: 1;
+    }
+    .team {
+      background-color: #3a454d;
+      h4, p {
+        color: #fff;
+      }
+    }
+  }
+}
+
+.fs {
+  margin-left: 0;
+}
+
+.hover-box {
+  a {
+    width: 50px;
+    height: 50px;
+    padding: 0 8px;
+    background-color: #3a454d;
+    &:hover {
+      background-color: #4e5a62;
+    }
+  }
+}
+
+.hover-img {
+  position: relative;
+  font-size: 0;
+}
+
+.hover-box {
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, .4);
+  text-align: center;
+  transition: 0.2s all;
+  margin: 0;
+}
+
+.hover-holder {
+  position: absolute;
+  width: 160px;
+  height: 50px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.team {
+  padding: 18px 0 18px 19px;
+  background-color: #e1e6ea;
+  transition: .2s all;
+  h4 {
+    color: #292f36;
+    margin: 0;
+  }
+  p {
+    margin: 0;
+  }
+}
+
+.team-holder {
+  margin: 86px 0 100px 0;
+}
+
+.title-team {
+  h2 {
+    margin: 0 0 63px 0;
+  }
+}
+
+.partnership {
+  background-color: #3a454d;
+}
+
+.title-partnership {
+  h2 {
+    color: #fff;
+    &::before {
+      background-color: #4e5a62;
+    }
+  }
+}
+
+.card {
+  position: relative;
+  width: 360px;
+  display: inline-block;
+  margin: 0 20px 42px;
+  .card-title {
+    background-color: #292f36;
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    height: 60px;
+    bottom: 0;
+    left: 0;
+  }
+  .hover-holder {
+    width: 20px;
+    height: 20px;
+    top: 93px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  &:hover {
+    .card-title {
+      background-color: #292f36;
+      opacity: 1;
+    }
+  }
+  h4 {
+    color: #fff;
+  }
+}
+
+.card-hover {
+  background-color: rgba(0, 0, 0, .2);
+}
+
+.card-hover {
+  a {
+    background-color: transparent;
+    font-size: 20px;
+    padding: 0;
+    width: 20px;
+    height: 20px;
+    &:hover {
+      background-color: transparent;
+    }
+  }
+}
+
+.partnership-holder {
+  margin: 86px 0 60px 0;
+}
+
+.show-more {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.wwd {
+  margin: 86px 0 165px 0;
+}
+
+.wwd-title {
+  margin-bottom: 77px;
+}
+
+.card-wwd {
+  width: 22%;
+  display: inline-block;
+  text-align: center;
+  margin: 0 21px 30px;
+  h4 {
+    font-size: 17px;
+    color: #292f36;
+    margin: 0;
+  }
+  i {
+    color: #23b7a4;
+    font-size: 48px;
+    margin-bottom: 30px;
+    display: inline-block;
+  }
+}
+
+.fs {
+  margin-left: 0;
+}
+
+.lb {
+  margin-right: 0;
+}
+
+.lb-holder {
+  margin-top: 94px;
+}
+.ft {
+  margin-top: 54px;
+  h4 {
+    font-size: 18px;
+    margin: 0 0 29px 0;
+  }
+  p {
+    color: #dcdfe1;
+  }
+}
+.features-holder {
+  margin-top: 91px;
+}
+.title-ft {
+  h2 {
+    margin: 0 0 63px 0;
+  }
+}
+.localisation-title {
+  h2 {
+    margin: 63px 0;
+  }
+}
+.map {
+  background: url("../img/map.jpg") no-repeat;
+  width: 100%;
+  height: 346px;
+}
+.send {
+  .btn {
+    border: 2px solid #23b7a4;
+    background-color: #23b7a4;
+    &:hover {
+      background-color: transparent;
+      color: #23b7a4;
+    }
+  }
+}
+form,
+fieldset {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+.left-block-info {
+  width: 535px;
+  display: inline-block;
+}
+.form-to-fill {
+  width: 555px;
+  display: inline-block;
+  margin-left: 50px;
+  input[type="text"],
+  input[type="email"] {
+    width: 240px;
+    height: 44px;
+    border-radius: 3px;
+    background-color: #ebeff2;
+    border: none;
+  }
+}
+.input-holder {
+  width: 49%;
+  display: inline-block;
+  label {
+    display: block;
   }
 }
