--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -9,17 +9,6 @@
 }
 
 @font-face {
-  font-family: 'icomoon';
-  src: url('../fonts/icomoon.eot?y87wpc');
-  src: url('../fonts/icomoon.eot?y87wpc#iefix') format('embedded-opentype'),
-  url('../fonts/icomoon.ttf?y87wpc') format('truetype'),
-  url('../fonts/icomoon.woff?y87wpc') format('woff'),
-  url('../fonts/icomoon.svg?y87wpc#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
   font-family: 'Open Sans';
   src: url('../fonts/OpenSans.eot');
   src: url('../fonts/OpenSans.eot?#iefix') format('embedded-opentype'),
@@ -63,6 +52,17 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?3799gb');
+  src:  url('../fonts/icomoon.eot?3799gb#iefix') format('embedded-opentype'),
+  url('../fonts/icomoon.ttf?3799gb') format('truetype'),
+  url('../fonts/icomoon.woff?3799gb') format('woff'),
+  url('../fonts/icomoon.svg?3799gb#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
@@ -81,23 +81,24 @@
 .icon-clock:before {
   content: "\e900";
 }
-
 .icon-cogs:before {
   content: "\e901";
 }
-
 .icon-mobile:before {
   content: "\e902";
 }
-
 .icon-pencil:before {
   content: "\e903";
 }
-
 .icon-plus:before {
   content: "\e904";
 }
-
+.icon-paragraph-center:before {
+  content: "\ea78";
+}
+.icon-paragraph-justify:before {
+  content: "\ea7a";
+}
 body {
   margin: 0;
 }
@@ -161,13 +162,13 @@ nav {
 
 .navbar-collapse {
   ul {
-    margin: 26px 0;
+    margin: 0;
   }
   li {
-    display: inline-block;
+    float: right;
+    margin: 31px 14px;
     border: 2px solid transparent;
     border-radius: 3px;
-    margin: 0 14px;
     transition: .2s;
     &:hover {
       border: 2px solid #5b6168;
@@ -188,7 +189,6 @@ nav {
     font-style: normal;
     padding: 4px 12px;
   }
-  float: right;
 }
 
 .sl-slide {
@@ -217,7 +217,11 @@ nav {
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
-  overflow: hidden;
+}
+.clearfix:after {
+  display: table;
+  content: '';
+  clear: both;
 }
 
 .slick-dots li button {
@@ -433,6 +437,7 @@ h2 {
     height: 50px;
     padding: 0 8px;
     background-color: #3a454d;
+    line-height: 50px;
     &:hover {
       background-color: #4e5a62;
     }
@@ -491,6 +496,7 @@ h2 {
 
 .partnership {
   background-color: #3a454d;
+  padding: 91px 0 60px 0;
 }
 
 .title-partnership {
@@ -513,7 +519,7 @@ h2 {
     position: absolute;
     width: 100%;
     height: 60px;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
   }
   .hover-holder {
@@ -550,18 +556,13 @@ h2 {
     }
   }
 }
-
-.partnership-holder {
-  margin: 86px 0 60px 0;
-}
-
 .show-more {
   text-align: center;
   margin-top: 30px;
 }
 
 .wwd {
-  margin: 86px 0 165px 0;
+  margin: 86px 0 100px 0;
 }
 
 .wwd-title {
@@ -607,9 +608,6 @@ h2 {
     color: #dcdfe1;
   }
 }
-.features-holder {
-  margin-top: 91px;
-}
 .title-ft {
   h2 {
     margin: 0 0 63px 0;
@@ -644,11 +642,24 @@ fieldset {
 .left-block-info {
   width: 535px;
   display: inline-block;
+  vertical-align: top;
+  padding-top: 60px;
+  h3 {
+    color: #292f36;
+    font-size: 20px;
+    margin: 0;
+  }
+  p:last-child {
+    margin-top: 30px;
+  }
 }
 .form-to-fill {
   width: 555px;
   display: inline-block;
   margin-left: 50px;
+  padding: 23px 30px 23px 30px;
+  margin-top: -140px;
+  background: #fff;
   input[type="text"],
   input[type="email"] {
     width: 240px;
@@ -656,12 +667,99 @@ fieldset {
     border-radius: 3px;
     background-color: #ebeff2;
     border: none;
+    margin-bottom: 23px;
+    padding-left: 20px;
+    color: #555;
   }
 }
 .input-holder {
   width: 49%;
   display: inline-block;
-  label {
+}
+label {
+  display: block;
+  margin: 0 0 8px 6px;
+}
+textarea {
+  width: 100%;
+  resize: none;
+  background-color: #ebeff2;
+  border: none;
+  border-radius: 3px;
+  margin-bottom: 25px;
+}
+.contact-info {
+  padding: 0 0 80px 0;
+}
+footer {
+  background: #3a454d;
+  p {
+    font-size: 14px;
+    color: #fff;
+  }
+}
+.socials {
+  float: right;
+  ul {
+    margin: 25px 0;
+  }
+  li {
+    display: inline-block;
+    margin: 0 10px;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+  a {
     display: block;
+    font: 28px/1.6 'Socialico';
+    color: #fff;
+    &:hover {
+      opacity: 0.7;
+    }
+  }
+}
+.copyright {
+  display: inline-block;
+  margin: 25px 0;
+}
+
+.navbar {
+  position: relative;
+}
+@media screen and (max-width: 992px) {
+  .navbar-toggler {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 48px;
+    height: 48px;
+    overflow: hidden;
+    font-size: 48px;
+    color: #ccc;
+    padding: 10px 0;
+    margin-right: 15px;
+  }
+  .navbar-collapse {
+    display: inline-block;
+    width: 100%;
+    padding: 10px 0;
+    ul {
+      margin: 0;
+      padding: 0;
+    }
+    li {
+      float: none;
+      width: 200px;
+    }
+    a {
+    }
+  }
+  .navbar-nav {
+    display: none;
+    position: absolute;
+    z-index: 1000;
+    background: rgba(29,33,38,.9);
   }
 }
