--- a/app/css/main.css
+++ b/app/css/main.css
@@ -577,6 +577,8 @@ label {
   margin: 0 0 8px 6px; }
 
 textarea {
+  padding: 10px;
+  color: #555;
   width: 100%;
   resize: none;
   background-color: #ebeff2;
