--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -681,6 +681,8 @@ label {
   margin: 0 0 8px 6px;
 }
 textarea {
+  padding: 10px;
+  color: #555;
   width: 100%;
   resize: none;
   background-color: #ebeff2;
